<resources>
    <string name="app_name">Deni Fuzi App</string>
    <string name="title_home">Home</string>
    <string name="title_daily_activity">Daily Activity</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_music">Music</string>
    <string name="title_profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Selanjutnya</string>
    <string name="start">Start</string>
    <string name="myself">My\nSelf</string>
    <string name="apps">- Apps -</string>
    <string name="by_dennie_fuzi_a">by\nDennie Fuzi A</string>
    <string name="fun">#Fun</string>
    <string name="fact">Fact</string>
    <string name="caption1">Sebagai seorang lelaki harus\nberani menghadapi serangga\ntapi tidak dengan kecoa</string>
    <string name="caption2">Ayam menjadi pilihan makanannya\nketika bingung  ingin makan apa di\nhari itu</string>
    <string name="caption3">Penyayang dan tergila-gila dengan\nkucing. tidak jarang  setiap kucing di\njalan pasti ditanya oleh saya</string>
    <string name="name">Dennie Fuzi Alviyanies</string>
    <string name="location">Bandung, Jawa Barat</string>
    <string name="friend_list">Friend List</string>
    <string name="age">24\nTahun</string>
    <string name="date">17\nJuni</string>
    <string name="blood">A\nGoldar</string>
    <string name="intro">Saya seorang mahasiswa Universitas Komputer Indonesia  ( UNIKOM ) dan juga karyawan di suatu perusahaan IT di kota bandung. Kuliah sambil bekerja menghasilkan tantangan tersendiri bagi diri saya dan saya harus bisa membagi waktu dengan baik di antara keduanya.</string>
    <string name="intro2">Selain bekerja dan kuliah saya begitu suka dengan kucing. Bisa di katakan kucing sudah menjadi bagian dari hidup saya. bagaimana tidak, disaat lelah dengan keseharian yang padat ketika bertemu dengan kucing energi saya terasa terisi kembali dengan mengelus bola bulu ini.</string>
    <string name="info_extra">Info Extra</string>
    <string name="mikes">Minuman Kesukaan</string>
    <string name="makes">Makanan Kesukaan</string>
    <string name="cita">Cita-Cita</string>
    <string name="hobi">Hobi</string>
    <string name="dennie_fuzi_alviyanies">Dennie Fuzi A</string>
    <string name="instagram">Instagram</string>
    <string name="ui_designer">UI Designer</string>
    <string name="dialy_activity">Dialy Activity</string>
    <string name="dennie_fuzi">Dennie Fuzi</string>
    <string name="denifuzi">\@denifuzi</string>
    <string name="diawali">Diawali dengan pagi yang cerah saya bangun dari  tempat tidur</string>
    <string name="galeri">Galeri</string>
    <string name="musik_video"><![CDATA[Musik & Video]]></string>
    <string name="profile">Profile</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="unikom">UNIKOM</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="lokasi">Lokasi</string>
    <string name="ig">Instagram</string>
    <string name="hobiPopup">Hobi</string>
    <string name="interest">Interest</string>
    <string name="pesawat">Pesawat Terbang</string>
    <string name="kucing">Kucing</string>
    <string name="cita_cita">Cita-Cita</string>
    <string name="ui">UI Designer</string>
    <string name="astronot">Astronot</string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="es_coklat">Es Coklat</string>
    <string name="susu">Susu</string>
    <string name="jalan_jalan">Jalan-Jalan</string>
    <string name="aboutpop">About</string>
    <string name="aplikasi_versi_n_v_1_0">Aplikasi versi\n v.1.0</string>
</resources>