<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily_activity"
        android:icon="@drawable/activity"
        android:title="@string/title_daily_activity" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/galery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>